<resources>
    <string name="a_little_bit">A little bit</string>
    <string name="a_little_bit_s_and_continue">A little bit, select and continue</string>
    <string name="a_little_success">A little success</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_button">About button</string>
    <string name="about_covid_button">About COVID Button</string>
    <string name="about_h">About heading</string>
    <string name="about_ptsd">About COVID Coach</string>
    <string name="about_ptsd_button">About ptsd coach button</string>
    <string name="activate_daily_inspiring_quote">Activate Daily Inspiring Quote</string>
    <string name="activate_daily_quote_checked">Activate daily inspiring quote button checked</string>
    <string name="activate_daily_quote_not_checked">Activate daily inspiring quote button not checked</string>
    <string name="activate_daily_quote_switch">Activate daily inspiring quote switch</string>
    <string name="activate_schedule">Activate schedule assessment</string>
    <string name="activate_schedule_checked">Activate schedule assessment button checked</string>
    <string name="activate_schedule_not_checked">Activate schedule assessment button not checked</string>
    <string name="activate_schedule_switch">Activate schedule assessment switch</string>
    <string name="activities_for_winding_down">Activities For Winding Down</string>
    <string name="activities_for_winding_down_btn">Activities for winding down button</string>
    <string name="activities_to_help_wake">Activities To Help Me Wake Up</string>
    <string name="activities_to_help_wake_btn">Activities to help me wake up button</string>
    <string name="activities_to_keep_awake">Activities To Keep Me Awake</string>
    <string name="activities_to_keep_awake_btn">Activities to keep me awake button</string>
    <string name="activities_to_keep_you_awake">Activities to Keep You Awake</string>
    <string name="activities_when_cant_sleep">Activities For When I Can\'t Sleep</string>
    <string name="activities_when_cant_sleep_btn">Activities for when i can\'t sleep</string>
    <string name="add">ADD</string>
    <string name="add_a_caption_here">Add a caption here (optional)</string>
    <string name="add_a_favorite">Add a\10favorite</string>
    <string name="add_a_favorite_btn">Add a favorite button</string>
    <string name="add_a_favorite_not_n">Add a Favorite</string>
    <string name="add_a_favorite_tool">Add a favorite tool</string>
    <string name="add_a_feeling">Add a feeling</string>
    <string name="add_a_note_here">Add a note here (optional)</string>
    <string name="add_a_reward">Add a Reward</string>
    <string name="add_a_tool">Add A Tool</string>
    <string name="add_a_tool_from_ptsd">Add a tool from COVID Coach</string>
    <string name="add_an_optional_caption_here">Optional caption input box</string>
    <string name="add_an_optional_note_here">Optional note input box</string>
    <string name="add_appreciation">Add Appreciation</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="add_contacts_button">Add contacts</string>
    <string name="add_coping_strategies">Add Coping Strategies</string>
    <string name="add_favorite_tools_h">Add favorite tools heading</string>
    <string name="add_i_message">Add \"I\" Message</string>
    <string name="add_image">Add Image</string>
    <string name="add_image_button">Add image</string>
    <string name="add_music_button">Add music</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="add_people_who_can_help_me">Add people who can help me</string>
    <string name="add_photo_button">Add photo</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_photos_to_create_slideshow">Add your own photos to create a custom slideshow</string>
    <string name="add_places">Add Places</string>
    <string name="add_strenght">Add Strength</string>
    <string name="add_strenght_h">Add strenght heading</string>
    <string name="add_strenght_help">Add Strength Help</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="add_video">Add video</string>
    <string name="add_warning_signs">Add Warning Signs</string>
    <string name="add_your_own">Add your own</string>
    <string name="added_new_contact">Added new contact</string>
    <string name="added_new_image">Added new image</string>
    <string name="added_new_music">Added new music</string>
    <string name="additional_resources">Additional Resources</string>
    <string name="ago">ago</string>
    <string name="album_view">Select photo album</string>
    <string name="alcohol_and_drugs_programs_near_you">Alcohol and Drug Treatment Programs Near You</string>
    <string name="all_data_deleted_successfully">Application data restored successfully</string>
    <string name="also_send_email">You can also send us feedback and suggestions about the app by sending an email to:</string>
    <string name="am_pm">AM/PM</string>
    <string name="anonymous_usage_disclaimer">Help us improve this application by automatically submitting usage data. This application WILL NEVER COLLECT any personally identifying information, location, or other sensitive data, and usage data is never shared or sold.</string>
    <string name="answer">Answer</string>
    <string name="anxiety">Anxiety</string>
    <string name="app_name">COVID Coach</string>
    <string name="app_name_heading">COVID Coach Heading</string>
    <string name="app_name_select">Multiple Image Select</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arg_healthier_txt_fix">Every relationship has conflict. Here are some strategies to try when you’re having arguments.</string>
    <string name="assess_schedule_intro">Select a schedule to retake the self-assessment and monitor your progress. Taking the assessment monthly is best.</string>
    <string name="assessment">Assessment</string>
    <string name="assessment_data_deleted_successfully">Assessment data deleted successfully</string>
    <string name="assessment_data_exported_into">Assessment data exported into</string>
    <string name="assessment_graph_see_text">Assessment History graph. See the descriptive text below the graph for detailed information</string>
    <string name="assessment_h">Assessment heading</string>
    <string name="assessment_history">Assessment History</string>
    <string name="assessment_history_button">Assessment history button</string>
    <string name="assessment_in_7_days">It has been less than a week since you last took the self-assessment. The questions are designed to assess your symptoms since the last time you answered, so it is not helpful to take it more than once a week.</string>
    <string name="begin">Begin</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_btn">Cancel button</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_btn">Confirm button</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="create_new_contact_btn">Create new contact button</string>
    <string name="edt_how_rid">How is your current situation different from the traumatic experience Input Box</string>
    <string name="edt_what_rid">What triggered you? Input box</string>
    <string name="eg_rid_how">such as, \"In U.S.A., not Iraq. Civilians on the highway. Driving my own truck.\"</string>
    <string name="eg_rid_what">such as, \"Drove under a bridge\"</string>
    <string name="every_three_months">Every three months</string>
    <string name="every_two_weeks">Every two weeks</string>
    <string name="from_camera">From Camera</string>
    <string name="from_camera_btn">From Camera Button</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_gallery_btn">From Gallery Button</string>
    <string name="how_experience_different">How is your current situation different from the traumatic experience?</string>
    <string name="identify_trigger">Identify the Trigger</string>
    <string name="identify_trigger_h">Identify the trigger heading</string>
    <string name="last_assessment">Last assessment</string>
    <string name="menu">menu</string>
    <string name="monthly">Monthly</string>
    <string name="next_assessment">Next assessment</string>
    <string name="pick_from_contact_list">Pick from contact list</string>
    <string name="pick_from_contact_list_btn">Pick from contact list button</string>
    <string name="picker">Picker</string>
    <string name="reminders">Reminders</string>
    <string name="rid">RID</string>
    <string name="rid_h">RID heading</string>
    <string name="rid_identify_text_1">Go back over the last few minutes or hours and Identify what reminder of your trauma you encountered. Triggers can be inside ourselves, like thoughts or memories, or outside of ourselves, like conversations or situations or things we encounter in the world (e.g., a particular person or place). Figuring out what triggered you can be tricky sometimes. Do not worry if you cannot identify the trigger, just focus on relaxing and talking yourself down.</string>
    <string name="rid_identify_text_2">Once you identify the trigger if you can, it is important to notice how it is just a reminder and not the actual trauma happening again, despite how your mind and body may be reacting. Really notice how the current trigger is different from your trauma. Remind yourself of those differences again and again</string>
    <string name="rid_start_explanation">The RID tool is for times when you have been triggered by a reminder of a past trauma. You will be led through three steps to manage your distress.</string>
    <string name="view_history">View history</string>
    <string name="view_history_rid">View RID history</string>
    <string name="weekly">Weekly</string>
    <string name="what_triggered_you">What triggered you?</string>
</resources>