<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/grey_hh_light" android:padding="@dimen/padding_large" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large" android:text="@string/assess_schedule_intro"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/assessment_schedule_layout_enable" android:paddingTop="@dimen/padding_small" android:paddingBottom="@dimen/padding_small" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large" android:contentDescription="@string/activate_schedule_not_checked">
        <TextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/padding_large" android:text="@string/activate_schedule"/>
        <androidx.appcompat.widget.SwitchCompat android:theme="@style/switchStyle" android:layout_gravity="center_vertical" android:id="@+id/assessment_schedule_switch_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/activate_schedule_switch" android:importantForAccessibility="no"/>
    </LinearLayout>
    <TextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:id="@+id/assessment_schedule_txt_last" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large" android:text="@string/last_assessment"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large">
        <TextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:layout_gravity="center_vertical" android:id="@+id/assessment_schedule_txt_next" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/padding_medium" android:text="@string/next_assessment"/>
        <Button android:textSize="@dimen/txt_normal" android:layout_gravity="center_vertical" android:id="@+id/assessment_schedule_btn_time_picker" android:background="@drawable/custom_btn_white" android:padding="@dimen/padding_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0dp" android:minHeight="0dp" android:text="9:00 AM"/>
    </LinearLayout>
    <RadioGroup android:id="@+id/assessment_schedule_radio_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="@dimen/txt_normal" android:id="@+id/assessment_schedule_radio_weekly" android:layout_width="match_parent" android:layout_height="48dp" android:checked="false" android:text="@string/weekly"/>
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="@dimen/txt_normal" android:id="@+id/assessment_schedule_radio_2_weeks" android:layout_width="match_parent" android:layout_height="48dp" android:checked="true" android:text="@string/every_two_weeks"/>
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="@dimen/txt_normal" android:id="@+id/assessment_schedule_radio_monthly" android:layout_width="match_parent" android:layout_height="48dp" android:checked="false" android:text="@string/monthly"/>
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="@dimen/txt_normal" android:id="@+id/assessment_schedule_radio_3_months" android:layout_width="match_parent" android:layout_height="48dp" android:checked="false" android:text="@string/every_three_months"/>
    </RadioGroup>
</LinearLayout>
