<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@android:color/white" android:paddingTop="@dimen/padding_large" android:paddingBottom="@dimen/padding_large" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xnormal" android:textColor="@color/grey" android:id="@+id/bs_contacts_txt_pick" android:background="@drawable/custom_bg_white" android:padding="@dimen/padding_large" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pick_from_contact_list" android:contentDescription="@string/pick_from_contact_list_btn" android:importantForAccessibility="yes" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
    <View android:background="@color/grey_h_light" android:layout_width="match_parent" android:layout_height="1px"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xnormal" android:textColor="@color/grey" android:id="@+id/bs_contacts_txt_create" android:background="@drawable/custom_bg_white" android:padding="@dimen/padding_large" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/create_new_contact" android:contentDescription="@string/create_new_contact_btn" android:importantForAccessibility="yes" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
    <View android:background="@color/grey_h_light" android:layout_width="match_parent" android:layout_height="1px"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xnormal" android:textColor="@color/grey" android:id="@+id/bs_contacts_txt_cancel" android:background="@drawable/custom_bg_white" android:padding="@dimen/padding_large" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:contentDescription="@string/cancel_btn" android:importantForAccessibility="yes" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
</LinearLayout>
