<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/rid_identify_layout" android:background="@color/grey_hh_light" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/padding_large" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xlarge" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center_horizontal" android:id="@+id/rid_identify_txt_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_xx_small" android:text="@string/rid" android:contentDescription="@string/rid_h" android:fontFamily="@font/font_semibold" app:fontFamily="@font/font_semibold"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_small" android:text="@string/identify_trigger" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:contentDescription="@string/identify_trigger_h" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
        <View android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_large"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_x_small" android:text="@string/what_triggered_you" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
        <androidx.appcompat.widget.AppCompatEditText android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:textColorHint="@color/grey" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/rid_identify_edt_what" android:background="@drawable/bg_edt" android:padding="@dimen/padding_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_small" android:hint="@string/eg_rid_what" android:maxLines="3" android:lines="3" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:inputType="none|text|textCapSentences|textMultiLine" android:contentDescription="@string/edt_what_rid" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_x_small" android:text="@string/how_experience_different" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
        <androidx.appcompat.widget.AppCompatEditText android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:textColorHint="@color/grey" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/rid_identify_edt_how" android:background="@drawable/bg_edt" android:padding="@dimen/padding_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_xx_small" android:hint="@string/eg_rid_how" android:maxLines="3" android:lines="3" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:inputType="none|text|textCapSentences|textMultiLine" android:contentDescription="@string/edt_how_rid" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
    </LinearLayout>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/bottom_tool_layout_standard"/>
</LinearLayout>
