<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/grey_hh_light" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_large" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xlarge" android:textColor="@android:color/black" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_xx_small" android:text="@string/rid" android:contentDescription="@string/rid_h" android:fontFamily="@font/font_semibold" app:fontFamily="@font/font_semibold"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large" android:text="@string/rid_start_explanation" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
            <vainstrum.Components.ButtonTracking android:textSize="@dimen/txt_mid_btn" android:textColor="@android:color/black" android:id="@+id/rid_btn_begin" android:background="@drawable/custom_btn_white_very_rounded" android:padding="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_mlarge" android:layout_marginTop="@dimen/padding_large" android:layout_marginRight="@dimen/padding_mlarge" android:layout_marginBottom="@dimen/padding_large" android:minHeight="60dp" android:text="@string/begin" android:contentDescription="@string/begin" android:fontFamily="@font/font_semibold" app:fontFamily="@font/font_semibold" app:tracking_id="35762"/>
            <vainstrum.Components.ButtonTracking android:textSize="@dimen/txt_mid_btn" android:textColor="@android:color/black" android:id="@+id/rid_btn_view_history" android:background="@drawable/custom_btn_white_very_rounded" android:padding="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_mlarge" android:layout_marginRight="@dimen/padding_mlarge" android:layout_marginBottom="@dimen/padding_large" android:minHeight="60dp" android:text="@string/view_history" android:contentDescription="@string/view_history_rid" android:fontFamily="@font/font_semibold" app:fontFamily="@font/font_semibold" app:tracking_id="35763"/>
        </LinearLayout>
    </LinearLayout>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/bottom_tool_layout_standard"/>
</LinearLayout>
