<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/grey_hh_light" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/padding_large" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xlarge" android:textColor="@android:color/black" android:gravity="center_horizontal" android:id="@+id/rid_next_steps_txt_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_xx_small" android:text="@string/rid" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:contentDescription="@string/rid_h" android:fontFamily="@font/font_semibold" app:fontFamily="@font/font_semibold"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:gravity="center_horizontal" android:id="@+id/rid_next_steps_txt_subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_small" android:text="@string/identify_trigger" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:contentDescription="@string/identify_trigger_h" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
            <View android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_small"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:id="@+id/rid_next_steps_txt_content_1" android:padding="@dimen/padding_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rid_identify_text_1" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_normal" android:textColor="@android:color/black" android:id="@+id/rid_next_steps_txt_content_2" android:padding="@dimen/padding_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rid_identify_text_2" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
        </LinearLayout>
    </ScrollView>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/bottom_tool_layout_standard"/>
</LinearLayout>
