<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/home_layout_toolbar" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_default_height_material">
    <vainstrum.Components.ImageViewTracking android:id="@+id/home_icon_drawer" android:focusable="true" android:layout_width="@dimen/abc_action_bar_default_height_material" android:layout_height="@dimen/abc_action_bar_default_height_material" android:src="@drawable/icon_menu" android:scaleType="centerInside" android:contentDescription="@string/menu" android:importantForAccessibility="yes" app:tracking_id="18319"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xnormal" android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:id="@+id/home_txt_title" android:focusable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_weight="1" android:lineSpacingExtra="4dp" android:lineSpacingMultiplier="1" android:contentDescription="@string/app_name_heading" android:importantForAccessibility="yes" android:fontFamily="@font/font_regular" app:fontFamily="@font/font_regular"/>
    <vainstrum.Components.ImageViewTracking android:id="@+id/home_icon_reminders" android:focusable="true" android:layout_width="@dimen/abc_action_bar_default_height_material" android:layout_height="@dimen/abc_action_bar_default_height_material" android:src="@drawable/icon_reminder" android:scaleType="centerInside" android:contentDescription="@string/reminders" android:importantForAccessibility="yes" app:tracking_id="12723"/>
</LinearLayout>
