<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@android:color/white" android:paddingTop="@dimen/padding_medium" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xnormal" android:textColor="@android:color/black" android:id="@+id/get_photo_txt_camera" android:background="?attr/selectableItemBackground" android:paddingTop="@dimen/padding_large" android:paddingBottom="@dimen/padding_large" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/from_camera" android:contentDescription="@string/from_camera_btn" android:importantForAccessibility="yes" android:fontFamily="@font/font_regular" android:paddingStart="@dimen/padding_mlarge" android:paddingEnd="@dimen/padding_small" app:fontFamily="@font/font_regular"/>
    <View android:background="@color/grey_light" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginLeft="@dimen/padding_mlarge"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/txt_xnormal" android:textColor="@android:color/black" android:id="@+id/get_photo_txt_gallery" android:background="?attr/selectableItemBackground" android:paddingTop="@dimen/padding_large" android:paddingBottom="@dimen/padding_large" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/from_gallery" android:contentDescription="@string/from_gallery_btn" android:importantForAccessibility="yes" android:fontFamily="@font/font_regular" android:paddingStart="@dimen/padding_mlarge" android:paddingEnd="@dimen/padding_small" app:fontFamily="@font/font_regular"/>
</LinearLayout>
